trunk/Archive2/78/3b8208e0eb26df/output
main.cpp:9:1: error: 'main' must return 'int'
void main()
^~~~
int
1 error generated.
